// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateRootJestConfig should delete lib project ref from root jest config 1`] = `
"module.exports = {
  projects: [
    '<rootDir>/apps/my-app/',
    '<rootDir>/apps/my-other-app',
    '<rootDir>/libs/my-lib',
    '<rootDir>/libs/my-other-lib/',
  ],
};
"
`;

exports[`updateRootJestConfig should delete lib project ref from root jest config 2`] = `
"module.exports = {
  projects: [
    '<rootDir>/apps/my-app/',
    '<rootDir>/apps/my-other-app',
    '<rootDir>/libs/my-other-lib/',
  ],
};
"
`;

exports[`updateRootJestConfig should delete lib project ref from root jest config 3`] = `
"module.exports = {
  projects: [
    '<rootDir>/apps/my-app/',
    '<rootDir>/apps/my-other-app',
  ],
};
"
`;

exports[`updateRootJestConfig should not delete lib project ref from root jest config if there is no project jest config 1`] = `
"module.exports = {
  projects: [
    '<rootDir>/apps/my-app/',
    '<rootDir>/apps/my-other-app',
    
    '<rootDir>/libs/my-other-lib/',
  ],
};
"
`;
